2014-11-22  Alan Mackenzie  <acm@muc.de>

	Fix error with `mark-defun' and "protected:" in C++ Mode.
	Fixes: debbugs:19134.

	* progmodes/cc-cmds.el (c-where-wrt-brace-construct): Handle a
	return code of (label) from c-beginning-of-decl-1.

2014-11-22  Ulf Jasper  <ulf.jasper@web.de>

	* net/newst-backend.el (newsticker--sentinel-work): Tell
	`libxml-parse-xml-region' to discard comments. Fixes bug#18787.

2014-11-22  Michael Albinus  <michael.albinus@gmx.de>

        * net/tramp-sh.el (tramp-sh-handle-start-file-process)
	(tramp-sh-handle-process-file): Propagate `process-environment'.

	* vc/vc-hg.el (vc-hg-state): No special handling for remote files;
	Tramp propagates environment variables now.

2014-11-22  Eric S. Raymond  <esr@snark>

	* vc/vc-filewise.el: New file to isolate code used only by the
	file-oriented back ends (SCCS/RCS/CVS/SRC) which should not
	live in vc.el and certainly not in vc-hooks.el.

	* vc/vc-hooks.el, vc-rcs.el, vc-sccs.el: vc-name  -> vc-master-name.
	This is preaparatory to isolating all the 'master' functions
	used only by the file-oriented back ends.  With this done first,
	the substantive diffs will be easier to read.

2014-11-21  Rüdiger Sonderfeld  <ruediger@c-plusplus.net>

	* play/morse.el (nato-alphabet): Mark URL in docstring in a way
	that is recognized by `help-mode'.

2014-11-21  Stefan Monnier  <monnier@iro.umontreal.ca>

	* desktop.el (desktop-create-buffer): Use activate-mark to set
	`mark-active' (bug#19058).

2014-11-21  Eric S. Raymond  <esr@snark>

	* vc/vc-src.el (vc-src-state): Fix bug that produced spurious
	nil state.

2014-11-21  Eli Zaretskii  <eliz@gnu.org>

	* vc/vc.el (vc-deduce-fileset): Support invocation from
	*vc-change-log* buffer.  (Bug#19084)

2014-11-13  Matthew Leach  <matthew@mattleach.net>

	* arc-mode.el (archive-visit-single-files): New.
	(archive-mode): Visit file if archive contains a single file.
	(Bug#1702)

2014-11-21  Ulrich Müller  <ulm@gentoo.org>
